# nebula-ai

./: .gitignore  Dockerfile.dev  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: black.yml  isort.yml
cogs/: ai.py  owner.py
config/: ai.json.example  config.json.example
config/prompts/_general/: convert.md  summary.md
config/prompts/imagegen/: generate.md
config/prompts/shell/: check.md  generate.md
config/prompts/web/: check.md  generate.md
containers/python/: Dockerfile
containers/python/_fs/usr/sbin/: harden.sh
containers/ssh/: Dockerfile
plugins/: __init__.py  _plugin.py  imagegen.py  images.py  reddit.py  shell.py  twitter.py  web.py  youtube.py
utils/: colorthief.py  container.py  context_commands.py  jsons.py
utils/scrapers/: __init__.py  _scraper.py  searxng.py
